# Developer_AI

./: .gitignore  README.md
C++/: CMakeLists.txt  face_lib.sh  face_run.sh  voice_lib.sh  voice_run.sh
C++/include/: Analyzer.hpp  ApiHandler.hpp  Processor.hpp  database.hpp  state_machine.hpp  tts_handler.hpp
C++/src/: database.cpp  main.cpp  state_machine.cpp
Facial Recognition/: README.md
Python/: README.md  WebSocket_Speech_VoskAPI.py  face_lib.sh  face_run.sh  voice_lib.sh  voice_run.sh
Python/Folder Demo/: Http_Speech_VoskAPI.py  Run_Cmd._txt  Test_websocket.py  VoskAPI_demo.py
Voice Recognition/: README.md
